[gd_scene load_steps=20 format=3 uid="uid://i44kdqydi4ms"]

[ext_resource type="PackedScene" path="res://component_scenes/enemies/enemy.tscn" id="1"]
[ext_resource type="PackedScene" path="res://component_scenes/player/combat_player.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://g0bgil2ysdiu" path="res://assets/ui/dark_background.png" id="3"]
[ext_resource type="Script" path="res://scenes/combat.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://yevjskqa6ygp" path="res://assets/ui/end_turn_border.png" id="7"]
[ext_resource type="Texture2D" uid="uid://dyca4e1in63xg" path="res://assets/ui/end_turn_background.png" id="8"]
[ext_resource type="Texture2D" uid="uid://bnumrdc6jmrct" path="res://assets/ui/end_turn_image.png" id="9"]

[sub_resource type="Shader" id="10"]
code = "shader_type canvas_item;

uniform vec2 direction = vec2(1, 0);
uniform float speed = 0.1;
uniform sampler2D noise;

vec4 overlay(vec4 base, vec4 blend){
	vec4 limit = step(0.5, base);
	return mix(2.0 * base * blend, 1.0 - 2.0 * (1.0 - base) * (1.0 - blend), limit);
}

void fragment()
{
	// image texture
	vec4 base = texture(TEXTURE, UV);
	// noise texture
	vec4 blend = texture(noise, UV + ( direction * speed * TIME));
	
	COLOR = overlay(base, blend);
}"

[sub_resource type="FastNoiseLite" id="12"]

[sub_resource type="NoiseTexture2D" id="13"]
height = 1024
seamless = true
noise = SubResource("12")

[sub_resource type="ShaderMaterial" id="11"]
shader = SubResource("10")
shader_parameter/direction = Vector2(1, -1)
shader_parameter/speed = 0.01
shader_parameter/noise = SubResource("13")

[sub_resource type="Animation" id="8"]
resource_name = "enemyEquipmentIn"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyEquipmentContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1047, 2), Vector2(485, 2)]
}

[sub_resource type="Animation" id="9"]
resource_name = "enemyEquipmentOut"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyEquipmentContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(485, 2), Vector2(1047, 2)]
}

[sub_resource type="Animation" id="1"]
resource_name = "heroEquipmentIn"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EquipmentContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-571, 2), Vector2(193, 2)]
}

[sub_resource type="Animation" id="14"]
resource_name = "heroEquipmentOut"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EquipmentContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(193, 2), Vector2(-571, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5oikf"]
_data = {
"enemyEquipmentIn": SubResource("8"),
"enemyEquipmentOut": SubResource("9"),
"heroEquipmentIn": SubResource("1"),
"heroEquipmentOut": SubResource("14")
}

[sub_resource type="Animation" id="6"]
resource_name = "enter"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EndTurnButton:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1078, 504), Vector2(928, 504)]
}

[sub_resource type="Animation" id="7"]
resource_name = "exit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EndTurnButton:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(928, 504), Vector2(1078, 504)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5x2hv"]
_data = {
"enter": SubResource("6"),
"exit": SubResource("7")
}

[node name="Combat" type="Node2D"]
script = ExtResource("6")

[node name="Background" type="TextureRect" parent="."]
material = SubResource("11")
texture = ExtResource("3")
stretch_mode = 7

[node name="Player" parent="." instance=ExtResource("2")]
layout_mode = 3
anchors_preset = 0
margin_left = 86.0
margin_top = 284.0
margin_right = 86.0
margin_bottom = 284.0

[node name="EquipmentContainer" type="VBoxContainer" parent="."]
alignment = 1

[node name="EnemyEquipmentContainer" type="VBoxContainer" parent="."]
alignment = 1

[node name="EnemyContainer" type="VBoxContainer" parent="."]
alignment = 1

[node name="Enemy" parent="EnemyContainer" instance=ExtResource("1")]
layout_mode = 2
margin_top = 167.0
margin_bottom = 167.0

[node name="Enemy2" parent="EnemyContainer" instance=ExtResource("1")]
layout_mode = 2
margin_top = 359.0
margin_bottom = 359.0

[node name="Frame" type="NinePatchRect" parent="."]
texture = ExtResource("7")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="EndTurnButton" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="Background" type="TextureRect" parent="EndTurnButton"]
layout_mode = 0
texture = ExtResource("8")

[node name="Timer" type="TextureRect" parent="EndTurnButton"]
layout_mode = 0
texture = ExtResource("9")

[node name="Border" type="TextureRect" parent="EndTurnButton"]
layout_mode = 0
texture = ExtResource("7")

[node name="EndTurnButton" type="Button" parent="EndTurnButton"]
layout_mode = 0

[node name="EquipmentAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5oikf")
}

[node name="TurnButtonAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5x2hv")
}

[connection signal="pressed" from="EndTurnButton/EndTurnButton" to="." method="_on_EndTurnButton_pressed"]
